[package]
name = "game_master"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "game_master"
path = "src/main.rs"

[[bin]]
name = "folk_server"
path = "src/bin/folk_server.rs"

[dependencies]
tokio = {version = "1.48.0", features = ["full"]}
axum = {version = "0.8.6", features = ["ws", "macros"]}
futures = "0.3.31"
local-ip-address = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "*", features = ["json"] }
toml = "0.8"
anyhow = "1.0.100"
tera = "1.20.1"
dotenv = "0.15.0"
aws-config = { version = "1.8.10", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.112.0"
zip = { version = "6.0.0"}